--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jasir K",
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.17",
