--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "firebase": "^11.3.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
     "react": "^18.3.1",
