--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
-    "firebase": "^11.3.1",
     "formik": "^2.4.6",
     "framer-motion": "^11.13.1",
     "react": "^18.3.1",
