--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "sonner": "^2.0.1",
     "swiper": "^11.2.2",
     "yup": "^1.6.1"
   },
